Refatoração - remoção da classe UtilS e migração dos métodos dela para outras classes Json passa a ser parseado num DTO para carregamento dos dados